--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
 			<artifactId>json</artifactId>
 			<version>20230618</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>7.13.0</version>
+			<scope>test</scope>
+		</dependency>
 
 
 	</dependencies>
